<resources>
    <string name="app_name">Discover Egypt</string>
    <string name="select">Please select a location</string>
    <string name="history">History:</string>
    <string name="location">Location: </string>
    <string name="title_activity_maps">Map</string>
    <string name="category_historic_places">Historical Places</string>
    <string name="more">More Information:</string>
    <string name="take_a_tour_to">Take a tour to ...</string>
    <string name="ancient_attractions">Ancient Attractions</string>
    <string name="the_pyramids">The Pyramids</string>
    <string name="modern_attractions">Modern Attractions</string>
    <string name="coastal_attractions">Coastal attractions</string>
    <string name="opera_name">Opera House</string>
    <string name="opera_short_location">11567 EL Borg Gezira,Cairo</string>
    <string name="opera_location">it is located on the southern portion of Gezira Island in the Nile River, in the Zamalek district west of and near downtown Cairo.</string>
    <string name="opera_history">The opera house was inaugurated on 10 October 1988
The total area of Cairo Opera House is 22772 m2, and the area of the building itself is 13855m2, and height 42m at most. The amazing location at the south part of Gezira Island, where there is plenty of Nile water and trees, made this location an amazing natural view for the Cairo Opera house.
</string>
    <string name="opera_info">The Cairo Opera Complex consists of seven theaters, a music library, an art gallery and a museum.
The Main Hall seats 1,200 people and has four levels, including orchestra seating, three tiers and a presidential box. It is used for operas and orchestra and ballet performances.
The Small Hall seats up to 500 people on a single floor, is used for chamber music and recitals and can double as a very large reception hall for important events.
The Open-Air Theatre is an acoustically designed square-shaped stage used for outdoor performances, and seats 600 people.
</string>
    <string name="pyramid_name">Pyramids</string>
    <string name="pyramid_short_location">Giza pyramid complex, Giza</string>
    <string name="pyramid_location">The Great Pyramids of Giza, located on a plateau on the west bank of the Nile River, on the outskirts of modern-day Cairo. </string>
    <string name="pyramid_history">Ancient Egyptians believed that when the king died, part of his spirit (known as “ka”) remained with his body. To properly care for his spirit, the corpse was mummified, and everything the king would need in the afterlife was buried with him, including gold vessels, food, furniture and other offerings. The pyramids became the focus of a cult of the dead king that was supposed to continue well after his death.</string>
    <string name="pyramid_info">From the beginning of the Dynastic Era (2950 B.C.), royal tombs were carved into rock and covered with flat-roofed rectangular structures known as “mastabas,” which were precursors to the pyramids. The oldest known pyramid in Egypt was built around 2630 B.C. at Saqqara, for the third dynasty’s King Djoser. Known as the Step Pyramid, it began as a traditional mastaba but grew into something much more ambitious. As the story goes, the pyramid’s architect was Imhotep, a priest and healer who some 1,400 years later would be deified as the patron saint of scribes and physicians.</string>
    <string name="sharm_name">Sharm El Sheikh</string>
    <string name="sharm_short_location">The southern tip of the Sinai Peninsula</string>
    <string name="sharm_location">Sharm El Sheikh has a significant location situated at the southernmost section of ‎Sinai, around 500 kilometers away from Cairo, the Egyptian capital, and positioned ‎in the place where the Suez Gulf and the Aqaba Gulf meet together with the Red Sea ‎to the South. ‎</string>
    <string name="sharm_history">Under the rule of the Ottoman Empire, Sharm el Sheikh became a significant port named Sarm-us Seyh in the 16th century. Some attempts were made to mine gold here, although these mines were largely unsuccessful and unproductive.  After Egypt regained control over the city of ‎‎1982, the Egyptian authorities have given special attention to the city to make it one ‎of the most wonderful resort that has become famous all around the world with ‎tourists coming from Europe, the United States, and all the regions of the globe to ‎spend their holiday in the city of peace.</string>
    <string name="sharm_info">The crystal-clear waters and incredible variety of exotic fish darting in and out of the colorful coral reefs have made this a scuba-diving paradise. Purpose-built Sharm El Sheikh occupies a prime position here, devoting itself solely to sun-and-sea holidays offering a family-friendly vibe and resort comforts, with world-class diving throw in.</string>
    <string name="naama_name">Naama Bay - Sharm</string>
    <string name="naama_short_location">Sharm El Sheikh</string>
    <string name="naama_location">it is located just 5 minutes drive from the historic Old City, and in the other direction just 5 minutes from the International Airport.</string>
    <string name="naama_history">"Na'ama Bay was not always a tourist location, once an isolated bay north of the Sharm el-Sheikh which itself was just a base for fishermen. Since 1982 the Egyptian government has encouraged development and building has continued, environmental zoning laws prevent destruction of the local habitats are cultural views "</string>
    <string name="naama_info">Fringed by a white sand beach and swaying palm trees, Naama Bay is the epicenter of Sharm el-Sheikh\'s resort life. There are plentiful restaurants, cafés, and souvenir stores if you get bored of the sand, but Naama Bay is really all about the beach. A pedestrian-only promenade rims the entire beach area, backed by a cluster of luxury resorts. Naama Bay is one of Egypt\'s top choices. The entire beach area has excellent facilities including ample sun-shades and loungers, and the beachside cafés mean you don\'t even have to move from your patch of sandy bliss all day.</string>
    <string name="ras_mohammed_name">Ras Mohammed National Park</string>
    <string name="ras_mohammed_short_location">Sharm El Sheikh</string>
    <string name="ras_mohammed_location">Ras Mohamed is 480 kilometers in size with 135 kilometers of land and 345 kilometers of water. This besides the size of the two islands: Tiran and Sanafir which is 370 kilometers with 100 kilometers that consist of land and 270 kilometers that consist of water. </string>
    <string name="ras_mohammed_history">The protected area in Ras Mohamed was established in 1983 and it was named Ras Mohamed, or the head of Mohamed because of its shape that looks like the top of a triangle with the mountains of south Sinai forming the other side of the triangle. The protected area of Ras Mohamed was included into the international list of heritage in the same year it was established. </string>
    <string name="ras_mohammed_info">Ras Muhammad is the most famous national park in Egypt and one of the most famous diving sites in the world. A national park that is located between the rich coral reefs of the Red Sea and the inland desert of the Sinai- it covers the coral headland at the southernmost tip of Sinai. At the southern end of the headland there is a small stand of Mangrove . Beneath the crystal-clear waters of the Red Sea you\'ll find coral reefs teeming with life including a diversity of vertebrate and invertebrate species. Slightly further offshore you might spot dolphins, including Risso's Dolphin. The area hosts White Stork.</string>
    <string name="hurghada_name">Hurghada</string>
    <string name="hurghada_short_location">550 Km from Cairo</string>
    <string name="hurghada_location">Hurghada is located on the Red Sea coast, almost 550 Km from Cairo. Egyptian’s used to call it Ghardaka, from which the name of the city was derived. Hurghada stretches for about 60 Km along the Red Sea coast.</string>
    <string name="hurghada_history">The city was founded in the early 20th century, and until a few years ago it was a small fishing village. But since the 1980s, it has been continually enlarged by Egyptian and foreign investors to become the leading coastal resort on the Red Sea</string>
    <string name="hurghada_info">Hurghada is Egypt\'s oldest and most famous resort. Offshore, is the colorful and bizarre Red Sea world of coral and fish life that first brought Hurghada to worldwide attention, while back on solid ground, the once tiny fishing settlement has mushroomed into a resort city catering directly to tourism. For northern Europeans (who make up most of Hurghada\'s tourism influx) this is a prime winter-escape destination with sandy white beaches and blue skies in abundance throughout the year. But while Hurghada's main attraction tends to be flopping on the beach, there's plenty more, both in the water and on dry land, for travelers who want a taste of adventure.</string>
    <string name="alexandria_name">Alexandria</string>
    <string name="alexandria_short_location">179Km north of Cairo</string>
    <string name="alexandria_location">Alexandria is situated on the Mediterranean coast of Egypt, 179Km (111 miles) north of Cairo. It is Egypt’s second largest city, behind Cairo, but is sadly overlooked by tourists.</string>
    <string name="alexandria_history">Alexandria was founded around a small, ancient Egyptian town c. 331 BC by Alexander the Great. It became an important center of the Hellenistic civilization and remained the capital of Hellenistic and Roman and Byzantine Egypt for almost 1000 years until the Muslims Succession ruled Egypt in AD 641, when a new capital was founded at Fustat (later absorbed into Cairo).</string>
    <string name="alexandria_info">Though the original library and lighthouse are long gone, ruins dating to antiquity still dot Alexandria, including the Roman amphitheater of Kom El-Dikka, the 30m-tall granite Pompey’s Pillar and the Kom El-Shoqafa catacombs. Finds from these sites are displayed in the Alexandria National Museum, which recounts the city’s founding by Alexander the Great.</string>
    <string name="marsa_matruh_name">Marsa Matruh</string>
    <string name="marsa_matruh_short_location">240 km west of Alexandria</string>
    <string name="marsa_matruh_location">Mersa Matruh is a seaport in Egypt, the capital of the Matrouh Governorate. It is 240 km (150 mi) west of Alexandria and 222 km from Sallum, on the main highway from the Nile Delta to the Libyan border.</string>
    <string name="marsa_matruh_history">At ancient times Marsa Matruh was called "Amounia" because it was the beginning of the way leading to Siwa where there was a temple for the god "Amoun" which was regularly visited by Alexander. History mentions as well that Cleopatra had a palace on the high hill that overlooks her famous basins in Marsa Matruh.Marsa Matrouh is located in the north west of Egypt which was once a place where Erwin Rommel commanded the Battle of El-Alamein. The cave for his operation was still there, but it has been changed into a Rommel Museum open to travelers. Its temperature can reach 28 C in summer in average, and it is not very low in winter, 13 C as the average one.</string>
</resources>