<!--
  Copyright 2014 Soichiro Kashima

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:minHeight="?attr/actionBarSize" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardBackgroundColor="#F0F0F0"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <TextView
                                style="@style/HeadlineText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/location" />

                            <TextView
                                android:id="@+id/historical_place_location"
                                style="@style/InformationText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/opera_location" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp"
                        app:cardBackgroundColor="#F0F0F0">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <TextView
                                style="@style/HeadlineText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/history" />

                            <TextView
                                android:id="@+id/historical_place_history"
                                style="@style/InformationText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/opera_location" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardBackgroundColor="#F0F0F0"
                        app:cardCornerRadius="8dp"
                        android:elevation="10dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <TextView
                                style="@style/HeadlineText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/more" />

                            <TextView
                                android:id="@+id/historical_place_info"
                                style="@style/InformationText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/opera_info" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_light_blue_500"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button2"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
            app:theme="@style/Toolbar">


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:drawSelectorOnTop="true"
                app:theme="@style/Toolbar" />
        </android.support.v7.widget.Toolbar>



            <ImageView
                android:id="@+id/historical_place_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="fitXY"
                />



    </LinearLayout>
</FrameLayout>
